objects/APTS_ERP_Order_Additional_Data__c.object
<CustomObject>
    <description>Object to hold additional data provided by ERP systems</description>
    <fields>
        <fullName>APTS_Additional_Data_Key__c</fullName>
        <formula>APTS_ERPID__c + APTS_VBELN__c + APTS_POSNN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Data Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DELETE__c</fullName>
        <description>Deletion flag, delete information from Apttus</description>
        <label>Deletion Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DOCNUM__c</fullName>
        <description>IDoc Number</description>
        <label>IDoc Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ERPID__c</fullName>
        <label>ERPID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_MEINS__c</fullName>
        <description>UoM</description>
        <label>UoM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MENGE__c</fullName>
        <description>Quantity</description>
        <label>Quantity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_POSNN__c</fullName>
        <description>SAP Item</description>
        <label>SAP Item</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_QUALF__c</fullName>
        <description>Qualifier</description>
        <label>Qualifier</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VALUE__c</fullName>
        <description>General Information</description>
        <label>General Information</label>
        <length>132</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VBELN__c</fullName>
        <description>SAP document</description>
        <label>SAP document</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_WAERK__c</fullName>
        <description>Currency</description>
        <label>Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_WERT__c</fullName>
        <description>Value</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>ERP Order Additional Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ERP-ORDER-ADD-DATA-{000000}</displayFormat>
        <label>ERP Order Additional Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Order Additional Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>